// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapFellowsFilterCard tests should render MapFellowsFilterCards when props display is passed in as project 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MapFellowsFilterCard
    display="project"
    fellowSummaryDetails={
        Array [
            Object {
              "actualApprenticeshipStartDate": "2019-01-12",
              "actualSimulationsCompletionDate": "2018-11-05",
              "apprenticeshipManager": "Trust Birungi",
              "apprenticeshipTeam": "Watch Tower",
              "apprenticeshipTechnology": "Javascript/PREN,  PHP/Laravel",
              "bio": "Voluptas ad rem sunt sint laboriosam. Fugiat ut officiis voluptas consectetur quaerat placeat. Praesentium sunt voluptate iusto possimus at rerum sed architecto. Laboriosam illo ut aspernatur autem inventore a voluptate. Harum et voluptas molestiae consequatur.",
              "cohort": "Class 39 - LOS",
              "communication": "1",
              "currentStage": "Apprentice",
              "devPulseStatus": "gteWk5OffTrack",
              "email": "genesis.kohler@andela.com",
              "expectedApprenticeshipCompletionDate": "2019-04-13",
              "expectedApprenticeshipStartDate": "2018-11-12",
              "expectedSimulationsCompletionDate": "2018-11-05",
              "fellow_id": "-LHs4sEcIAVnPeKHTBGd",
              "id": 1,
              "initiative": "1",
              "integration": "0",
              "invalid_attempts": 0,
              "launchDate": "2022-08-06",
              "level": "D0B",
              "lmsStatus": "ltWk5OnTrack",
              "m1Facilitator": "Muthoni Muigai",
              "managerEmail": "trust.birungi@andela.com",
              "managerName": "Trust  Birungi",
              "managerRole": "TTL",
              "missing": 0,
              "mostRecentAdvancementDate": "---",
              "name": "Genesis Kohler",
              "overall_average": "0.666666666666667",
              "overall_status": "offTrack",
              "picture": "https://lorempixel.com/100/100/people/?40049",
              "professionalism": "1",
              "project": "Watch Tower",
              "quality": "0",
              "quantity": "1",
              "ratings": 5,
              "satisfied": 16,
              "simulationStartDate": "2018-08-20",
              "simulationsPM": "Victoria Offoma",
              "simulationsStack": "Javascript/MEAN",
              "simulationsTeam": "Prometheus",
              "startDate": "2018-08-06",
              "status": "gteWk5OffTrack",
              "submitted": 16,
              "total": 16,
              "unsubmitted": 0,
              "weeksSpent": 13,
            },
            Object {
              "actualApprenticeshipStartDate": "2018-09-17",
              "apprenticeshipManager": "Trust Birungi",
              "apprenticeshipTeam": "Watch Tower",
              "apprenticeshipTechnology": "PHP/Laravel,  Javascript/PREN",
              "bio": "Beatae modi ratione earum. Quo eos exercitationem qui totam est dolorem facere. Voluptatibus beatae sit sed provident deserunt fugit quos doloremque. Ea id inventore et totam. Ipsam ipsa similique quidem culpa voluptas.",
              "cohort": "Class 24 - LOS",
              "communication": "0",
              "currentStage": "Apprentice",
              "devPulseStatus": "gteWk5OffTrack",
              "email": "burley.hirthe@andela.com",
              "expectedApprenticeshipCompletionDate": "2018-12-11",
              "expectedApprenticeshipStartDate": "2018-09-17",
              "fellow_id": "-LD3PA3VgP4qvRRORX08",
              "initiative": "1.33333333333333",
              "integration": "1",
              "level": "D0B",
              "managerEmail": "trust.birungi@andela.com",
              "managerName": "Trust  Birungi",
              "managerRole": "TTL",
              "mostRecentAdvancementDate": "---",
              "name": "Burley Hirthe",
              "overall_average": "0.791666666666667",
              "overall_status": "offTrack",
              "picture": "https://lorempixel.com/100/100/people/?58306",
              "professionalism": "0",
              "project": "Watch Tower",
              "quality": "1",
              "quantity": "1.41666666666667",
              "ratings": 12,
              "startDate": "N/A",
              "status": "gteWk5OffTrack",
              "weeksSpent": 30,
            },
            Object {
              "actualApprenticeshipStartDate": "2018-12-15",
              "apprenticeshipManager": "Trust Birungi",
              "apprenticeshipTeam": "Watch Tower",
              "apprenticeshipTechnology": "Javascript/PREN,  PHP/Laravel",
              "bio": "Dolores aut in quisquam vitae. Asperiores nostrum ut ipsam consequuntur possimus perferendis dignissimos. Illo et est rerum nihil. Dignissimos nemo voluptate sed cupiditate expedita quo ducimus quos. Et vel et nihil error fuga qui ipsa. Qui dolorum eum corrupti tempore laborum.",
              "cohort": "Class 10 - KLA",
              "currentStage": "Apprentice",
              "email": "roberta.swift@andela.com",
              "expectedApprenticeshipCompletionDate": "2019-03-11",
              "expectedApprenticeshipStartDate": "2018-09-17",
              "fellow_id": "-LJK2fj_k_R7aYBAq_AR",
              "id": 3,
              "invalid_attempts": 0,
              "level": "D0B",
              "lmsStatus": "ltWk5OnTrack",
              "managerEmail": "trust.birungi@andela.com",
              "managerName": "Trust  Birungi",
              "managerRole": "TTL",
              "missing": 0,
              "mostRecentAdvancementDate": "---",
              "name": "Roberta Swift",
              "overall_status": "onTrack",
              "picture": "https://lorempixel.com/100/100/people/?33359",
              "project": "Watch Tower",
              "satisfied": 16,
              "startDate": "N/A",
              "status": "ltWk5OnTrack",
              "submitted": 16,
              "total": 16,
              "unsubmitted": 0,
              "weeksSpent": 17,
            },
            Object {
              "actualApprenticeshipStartDate": "2018-12-15",
              "apprenticeshipManager": "Trust Birungi",
              "apprenticeshipTeam": "Watch Tower",
              "apprenticeshipTechnology": "Javascript/PREN,  PHP/Laravel",
              "bio": "Totam rem et quibusdam quasi nulla est tenetur. Rerum quidem accusantium ad cupiditate. Et rerum totam et.",
              "cohort": "Class 10 - KLA",
              "communication": "1",
              "currentStage": "Apprentice",
              "devPulseStatus": "gteWk5OffTrack",
              "email": "waldo.schuster@andela.com",
              "expectedApprenticeshipCompletionDate": "2019-03-11",
              "expectedApprenticeshipStartDate": "2018-09-17",
              "fellow_id": "-LJK1qECFdekucrwqqkh",
              "id": 2,
              "initiative": "1",
              "integration": "1.125",
              "invalid_attempts": 0,
              "level": "D0B",
              "lmsStatus": "ltWk5OnTrack",
              "managerEmail": "trust.birungi@andela.com",
              "managerName": "Trust  Birungi",
              "managerRole": "TTL",
              "missing": 0,
              "mostRecentAdvancementDate": "---",
              "name": "Waldo Schuster",
              "overall_average": "1",
              "overall_status": "offTrack",
              "picture": "https://lorempixel.com/100/100/people/?18151",
              "professionalism": "1",
              "project": "Watch Tower",
              "quality": "0.875",
              "quantity": "1",
              "ratings": 8,
              "satisfied": 16,
              "startDate": "N/A",
              "status": "gteWk5OffTrack",
              "submitted": 16,
              "total": 16,
              "unsubmitted": 0,
              "weeksSpent": 17,
            },
            Object {
              "actualApprenticeshipStartDate": "2019-01-14",
              "actualSimulationsCompletionDate": "2019-01-11",
              "apprenticeshipManager": "Trust Birungi",
              "apprenticeshipTeam": "Watch Tower",
              "apprenticeshipTechnology": "JavaScript,  ReactJS,  PHP/Laravel,  Redux,  Eloquent",
              "bio": "Dolor placeat inventore non molestiae. Aut quis ea nihil vero. Consequuntur asperiores omnis magni voluptas. Ut sit ipsa rerum. Sed nemo quis iure est occaecati fugit consequuntur voluptas. Eaque perferendis tempore libero accusantium debitis aspernatur suscipit architecto.",
              "cohort": "Class 41 - LOS",
              "communication": "2",
              "currentStage": "Apprentice",
              "devPulseStatus": "ltWk5OnTrack",
              "email": "teresa.macejkovic@andela.com",
              "expectedApprenticeshipCompletionDate": "2019-04-08",
              "expectedApprenticeshipStartDate": "2019-01-14",
              "expectedSimulationsCompletionDate": "2019-01-08",
              "fellow_id": "-LLUW2BwQiZS0j9KF10j",
              "id": 4,
              "initiative": "2",
              "integration": "2",
              "invalid_attempts": 0,
              "launchDate": "2022-10-02",
              "level": "D0B",
              "lmsStatus": "ltWk5OnTrack",
              "managerEmail": "trust.birungi@andela.com",
              "managerName": "Trust  Birungi",
              "managerRole": "TTL",
              "missing": 0,
              "mostRecentAdvancementDate": "---",
              "name": "Teresa Macejkovic",
              "overall_average": "2",
              "overall_status": "onTrack",
              "picture": "https://lorempixel.com/100/100/people/?95393",
              "professionalism": "2",
              "project": "Watch Tower",
              "quality": "2",
              "quantity": "2",
              "ratings": 1,
              "satisfied": 16,
              "simulationStartDate": "2018-10-16",
              "simulationsPM": "Mark Edomwande",
              "startDate": "2018-10-02",
              "status": "ltWk5OnTrack",
              "submitted": 16,
              "total": 16,
              "unsubmitted": 0,
              "weeksSpent": 13,
            },
            Object {
              "actualApprenticeshipStartDate": "2018-10-15",
              "apprenticeshipManager": "Trust Birungi",
              "apprenticeshipTeam": "Watch Tower",
              "apprenticeshipTechnology": "Javascript/PREN,  PHP/Laravel",
              "bio": "Molestias ipsa corporis impedit repellat. Ut odit cum nihil adipisci rerum consequatur. Consequatur voluptatibus beatae consequatur hic dolore eveniet. Quod architecto quod aut accusantium aspernatur.",
              "cohort": "Class 38 - LOS",
              "communication": "1",
              "currentStage": "Apprentice",
              "devPulseStatus": "gteWk5OnTrack",
              "email": "maddison.kiehn@andela.com",
              "expectedApprenticeshipCompletionDate": "2019-01-16",
              "expectedApprenticeshipStartDate": "2018-09-17",
              "fellow_id": "-LEnW5RRn0IkO8VjnMma",
              "initiative": "1.2",
              "integration": "1.1",
              "level": "D0B",
              "managerEmail": "trust.birungi@andela.com",
              "managerName": "Trust  Birungi",
              "managerRole": "TTL",
              "mostRecentAdvancementDate": "---",
              "name": "Maddison Kiehn",
              "overall_average": "1.13333333333333",
              "overall_status": "offTrack",
              "picture": "https://lorempixel.com/100/100/people/?59737",
              "pipStatus": true,
              "professionalism": "1.1",
              "project": "Watch Tower",
              "quality": "1.1",
              "quantity": "1.3",
              "ratings": 10,
              "startDate": "N/A",
              "status": "gteWk5OnTrack",
              "weeksSpent": 26,
            },
          ]
    }
    handleCardClick={[Function]}
    isTicked={
        Object {
            "project": "All Products",
            "status": "All Fellows",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <FellowFilterCard
          cardName="All Products"
          displayPicture={false}
          filterKey="project"
          handleCardClick={[Function]}
          isManager={false}
          isTicked={
                    Object {
                              "project": "All Products",
                              "status": "All Fellows",
                            }
          }
          numberOfFellows={6}
          picture=""
/>,
        <FellowFilterCard
          cardName="Watch Tower"
          displayPicture={false}
          filterKey="project"
          handleCardClick={[Function]}
          isManager={false}
          isTicked={
                    Object {
                              "project": "All Products",
                              "status": "All Fellows",
                            }
          }
          numberOfFellows={6}
          picture=""
/>,
      ],
      "className": "contain",
      "infinite": false,
      "nextArrow": <NavArrow
        buttonClass="slick-next"
        iconClass="fa-angle-right"
        onClick={[Function]}
/>,
      "prevArrow": <NavArrow
        buttonClass="slick-prev"
        iconClass="fa-angle-left"
        onClick={[Function]}
/>,
      "responsive": Array [
        Object {
          "breakpoint": 1000,
          "settings": Object {
            "slidesToScroll": 1,
            "slidesToShow": 2,
          },
        },
        Object {
          "breakpoint": 700,
          "settings": Object {
            "slidesToScroll": 1,
            "slidesToShow": 1,
          },
        },
      ],
      "rows": 1,
      "slidesToShow": 2.9999,
      "swipeToSlide": true,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "weak-key-5",
        "nodeType": "function",
        "props": Object {
          "cardName": "All Products",
          "displayPicture": false,
          "filterKey": "project",
          "handleCardClick": [Function],
          "isManager": false,
          "isTicked": Object {
            "project": "All Products",
            "status": "All Fellows",
          },
          "numberOfFellows": 6,
          "picture": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "weak-key-6",
        "nodeType": "function",
        "props": Object {
          "cardName": "Watch Tower",
          "displayPicture": false,
          "filterKey": "project",
          "handleCardClick": [Function],
          "isManager": false,
          "isTicked": Object {
            "project": "All Products",
            "status": "All Fellows",
          },
          "numberOfFellows": 6,
          "picture": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <FellowFilterCard
            cardName="All Products"
            displayPicture={false}
            filterKey="project"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={6}
            picture=""
/>,
          <FellowFilterCard
            cardName="Watch Tower"
            displayPicture={false}
            filterKey="project"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={6}
            picture=""
/>,
        ],
        "className": "contain",
        "infinite": false,
        "nextArrow": <NavArrow
          buttonClass="slick-next"
          iconClass="fa-angle-right"
          onClick={[Function]}
/>,
        "prevArrow": <NavArrow
          buttonClass="slick-prev"
          iconClass="fa-angle-left"
          onClick={[Function]}
/>,
        "responsive": Array [
          Object {
            "breakpoint": 1000,
            "settings": Object {
              "slidesToScroll": 1,
              "slidesToShow": 2,
            },
          },
          Object {
            "breakpoint": 700,
            "settings": Object {
              "slidesToScroll": 1,
              "slidesToShow": 1,
            },
          },
        ],
        "rows": 1,
        "slidesToShow": 2.9999,
        "swipeToSlide": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "weak-key-5",
          "nodeType": "function",
          "props": Object {
            "cardName": "All Products",
            "displayPicture": false,
            "filterKey": "project",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 6,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "weak-key-6",
          "nodeType": "function",
          "props": Object {
            "cardName": "Watch Tower",
            "displayPicture": false,
            "filterKey": "project",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 6,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`MapFellowsFilterCard tests should render MapFellowsFilterCards without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MapFellowsFilterCard
    display="status"
    fellowSummaryDetails={
        Array [
            Object {
              "actualApprenticeshipStartDate": "2019-01-12",
              "actualSimulationsCompletionDate": "2018-11-05",
              "apprenticeshipManager": "Trust Birungi",
              "apprenticeshipTeam": "Watch Tower",
              "apprenticeshipTechnology": "Javascript/PREN,  PHP/Laravel",
              "bio": "Voluptas ad rem sunt sint laboriosam. Fugiat ut officiis voluptas consectetur quaerat placeat. Praesentium sunt voluptate iusto possimus at rerum sed architecto. Laboriosam illo ut aspernatur autem inventore a voluptate. Harum et voluptas molestiae consequatur.",
              "cohort": "Class 39 - LOS",
              "communication": "1",
              "currentStage": "Apprentice",
              "devPulseStatus": "gteWk5OffTrack",
              "email": "genesis.kohler@andela.com",
              "expectedApprenticeshipCompletionDate": "2019-04-13",
              "expectedApprenticeshipStartDate": "2018-11-12",
              "expectedSimulationsCompletionDate": "2018-11-05",
              "fellow_id": "-LHs4sEcIAVnPeKHTBGd",
              "id": 1,
              "initiative": "1",
              "integration": "0",
              "invalid_attempts": 0,
              "launchDate": "2022-08-06",
              "level": "D0B",
              "lmsStatus": "ltWk5OnTrack",
              "m1Facilitator": "Muthoni Muigai",
              "managerEmail": "trust.birungi@andela.com",
              "managerName": "Trust  Birungi",
              "managerRole": "TTL",
              "missing": 0,
              "mostRecentAdvancementDate": "---",
              "name": "Genesis Kohler",
              "overall_average": "0.666666666666667",
              "overall_status": "offTrack",
              "picture": "https://lorempixel.com/100/100/people/?40049",
              "professionalism": "1",
              "project": "Watch Tower",
              "quality": "0",
              "quantity": "1",
              "ratings": 5,
              "satisfied": 16,
              "simulationStartDate": "2018-08-20",
              "simulationsPM": "Victoria Offoma",
              "simulationsStack": "Javascript/MEAN",
              "simulationsTeam": "Prometheus",
              "startDate": "2018-08-06",
              "status": "gteWk5OffTrack",
              "submitted": 16,
              "total": 16,
              "unsubmitted": 0,
              "weeksSpent": 13,
            },
            Object {
              "actualApprenticeshipStartDate": "2018-09-17",
              "apprenticeshipManager": "Trust Birungi",
              "apprenticeshipTeam": "Watch Tower",
              "apprenticeshipTechnology": "PHP/Laravel,  Javascript/PREN",
              "bio": "Beatae modi ratione earum. Quo eos exercitationem qui totam est dolorem facere. Voluptatibus beatae sit sed provident deserunt fugit quos doloremque. Ea id inventore et totam. Ipsam ipsa similique quidem culpa voluptas.",
              "cohort": "Class 24 - LOS",
              "communication": "0",
              "currentStage": "Apprentice",
              "devPulseStatus": "gteWk5OffTrack",
              "email": "burley.hirthe@andela.com",
              "expectedApprenticeshipCompletionDate": "2018-12-11",
              "expectedApprenticeshipStartDate": "2018-09-17",
              "fellow_id": "-LD3PA3VgP4qvRRORX08",
              "initiative": "1.33333333333333",
              "integration": "1",
              "level": "D0B",
              "managerEmail": "trust.birungi@andela.com",
              "managerName": "Trust  Birungi",
              "managerRole": "TTL",
              "mostRecentAdvancementDate": "---",
              "name": "Burley Hirthe",
              "overall_average": "0.791666666666667",
              "overall_status": "offTrack",
              "picture": "https://lorempixel.com/100/100/people/?58306",
              "professionalism": "0",
              "project": "Watch Tower",
              "quality": "1",
              "quantity": "1.41666666666667",
              "ratings": 12,
              "startDate": "N/A",
              "status": "gteWk5OffTrack",
              "weeksSpent": 30,
            },
            Object {
              "actualApprenticeshipStartDate": "2018-12-15",
              "apprenticeshipManager": "Trust Birungi",
              "apprenticeshipTeam": "Watch Tower",
              "apprenticeshipTechnology": "Javascript/PREN,  PHP/Laravel",
              "bio": "Dolores aut in quisquam vitae. Asperiores nostrum ut ipsam consequuntur possimus perferendis dignissimos. Illo et est rerum nihil. Dignissimos nemo voluptate sed cupiditate expedita quo ducimus quos. Et vel et nihil error fuga qui ipsa. Qui dolorum eum corrupti tempore laborum.",
              "cohort": "Class 10 - KLA",
              "currentStage": "Apprentice",
              "email": "roberta.swift@andela.com",
              "expectedApprenticeshipCompletionDate": "2019-03-11",
              "expectedApprenticeshipStartDate": "2018-09-17",
              "fellow_id": "-LJK2fj_k_R7aYBAq_AR",
              "id": 3,
              "invalid_attempts": 0,
              "level": "D0B",
              "lmsStatus": "ltWk5OnTrack",
              "managerEmail": "trust.birungi@andela.com",
              "managerName": "Trust  Birungi",
              "managerRole": "TTL",
              "missing": 0,
              "mostRecentAdvancementDate": "---",
              "name": "Roberta Swift",
              "overall_status": "onTrack",
              "picture": "https://lorempixel.com/100/100/people/?33359",
              "project": "Watch Tower",
              "satisfied": 16,
              "startDate": "N/A",
              "status": "ltWk5OnTrack",
              "submitted": 16,
              "total": 16,
              "unsubmitted": 0,
              "weeksSpent": 17,
            },
            Object {
              "actualApprenticeshipStartDate": "2018-12-15",
              "apprenticeshipManager": "Trust Birungi",
              "apprenticeshipTeam": "Watch Tower",
              "apprenticeshipTechnology": "Javascript/PREN,  PHP/Laravel",
              "bio": "Totam rem et quibusdam quasi nulla est tenetur. Rerum quidem accusantium ad cupiditate. Et rerum totam et.",
              "cohort": "Class 10 - KLA",
              "communication": "1",
              "currentStage": "Apprentice",
              "devPulseStatus": "gteWk5OffTrack",
              "email": "waldo.schuster@andela.com",
              "expectedApprenticeshipCompletionDate": "2019-03-11",
              "expectedApprenticeshipStartDate": "2018-09-17",
              "fellow_id": "-LJK1qECFdekucrwqqkh",
              "id": 2,
              "initiative": "1",
              "integration": "1.125",
              "invalid_attempts": 0,
              "level": "D0B",
              "lmsStatus": "ltWk5OnTrack",
              "managerEmail": "trust.birungi@andela.com",
              "managerName": "Trust  Birungi",
              "managerRole": "TTL",
              "missing": 0,
              "mostRecentAdvancementDate": "---",
              "name": "Waldo Schuster",
              "overall_average": "1",
              "overall_status": "offTrack",
              "picture": "https://lorempixel.com/100/100/people/?18151",
              "professionalism": "1",
              "project": "Watch Tower",
              "quality": "0.875",
              "quantity": "1",
              "ratings": 8,
              "satisfied": 16,
              "startDate": "N/A",
              "status": "gteWk5OffTrack",
              "submitted": 16,
              "total": 16,
              "unsubmitted": 0,
              "weeksSpent": 17,
            },
            Object {
              "actualApprenticeshipStartDate": "2019-01-14",
              "actualSimulationsCompletionDate": "2019-01-11",
              "apprenticeshipManager": "Trust Birungi",
              "apprenticeshipTeam": "Watch Tower",
              "apprenticeshipTechnology": "JavaScript,  ReactJS,  PHP/Laravel,  Redux,  Eloquent",
              "bio": "Dolor placeat inventore non molestiae. Aut quis ea nihil vero. Consequuntur asperiores omnis magni voluptas. Ut sit ipsa rerum. Sed nemo quis iure est occaecati fugit consequuntur voluptas. Eaque perferendis tempore libero accusantium debitis aspernatur suscipit architecto.",
              "cohort": "Class 41 - LOS",
              "communication": "2",
              "currentStage": "Apprentice",
              "devPulseStatus": "ltWk5OnTrack",
              "email": "teresa.macejkovic@andela.com",
              "expectedApprenticeshipCompletionDate": "2019-04-08",
              "expectedApprenticeshipStartDate": "2019-01-14",
              "expectedSimulationsCompletionDate": "2019-01-08",
              "fellow_id": "-LLUW2BwQiZS0j9KF10j",
              "id": 4,
              "initiative": "2",
              "integration": "2",
              "invalid_attempts": 0,
              "launchDate": "2022-10-02",
              "level": "D0B",
              "lmsStatus": "ltWk5OnTrack",
              "managerEmail": "trust.birungi@andela.com",
              "managerName": "Trust  Birungi",
              "managerRole": "TTL",
              "missing": 0,
              "mostRecentAdvancementDate": "---",
              "name": "Teresa Macejkovic",
              "overall_average": "2",
              "overall_status": "onTrack",
              "picture": "https://lorempixel.com/100/100/people/?95393",
              "professionalism": "2",
              "project": "Watch Tower",
              "quality": "2",
              "quantity": "2",
              "ratings": 1,
              "satisfied": 16,
              "simulationStartDate": "2018-10-16",
              "simulationsPM": "Mark Edomwande",
              "startDate": "2018-10-02",
              "status": "ltWk5OnTrack",
              "submitted": 16,
              "total": 16,
              "unsubmitted": 0,
              "weeksSpent": 13,
            },
            Object {
              "actualApprenticeshipStartDate": "2018-10-15",
              "apprenticeshipManager": "Trust Birungi",
              "apprenticeshipTeam": "Watch Tower",
              "apprenticeshipTechnology": "Javascript/PREN,  PHP/Laravel",
              "bio": "Molestias ipsa corporis impedit repellat. Ut odit cum nihil adipisci rerum consequatur. Consequatur voluptatibus beatae consequatur hic dolore eveniet. Quod architecto quod aut accusantium aspernatur.",
              "cohort": "Class 38 - LOS",
              "communication": "1",
              "currentStage": "Apprentice",
              "devPulseStatus": "gteWk5OnTrack",
              "email": "maddison.kiehn@andela.com",
              "expectedApprenticeshipCompletionDate": "2019-01-16",
              "expectedApprenticeshipStartDate": "2018-09-17",
              "fellow_id": "-LEnW5RRn0IkO8VjnMma",
              "initiative": "1.2",
              "integration": "1.1",
              "level": "D0B",
              "managerEmail": "trust.birungi@andela.com",
              "managerName": "Trust  Birungi",
              "managerRole": "TTL",
              "mostRecentAdvancementDate": "---",
              "name": "Maddison Kiehn",
              "overall_average": "1.13333333333333",
              "overall_status": "offTrack",
              "picture": "https://lorempixel.com/100/100/people/?59737",
              "pipStatus": true,
              "professionalism": "1.1",
              "project": "Watch Tower",
              "quality": "1.1",
              "quantity": "1.3",
              "ratings": 10,
              "startDate": "N/A",
              "status": "gteWk5OnTrack",
              "weeksSpent": 26,
            },
          ]
    }
    handleCardClick={[Function]}
    isTicked={
        Object {
            "project": "All Products",
            "status": "All Fellows",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <FellowFilterCard
          cardName="All Fellows"
          displayPicture={false}
          filterKey="status"
          handleCardClick={[Function]}
          isManager={false}
          isTicked={
                    Object {
                              "project": "All Products",
                              "status": "All Fellows",
                            }
          }
          numberOfFellows={6}
          picture=""
/>,
        <FellowFilterCard
          cardName="On Track"
          displayPicture={false}
          filterKey="status"
          handleCardClick={[Function]}
          isManager={false}
          isTicked={
                    Object {
                              "project": "All Products",
                              "status": "All Fellows",
                            }
          }
          numberOfFellows={2}
          picture=""
/>,
        <FellowFilterCard
          cardName="Off Track"
          displayPicture={false}
          filterKey="status"
          handleCardClick={[Function]}
          isManager={false}
          isTicked={
                    Object {
                              "project": "All Products",
                              "status": "All Fellows",
                            }
          }
          numberOfFellows={4}
          picture=""
/>,
        <FellowFilterCard
          cardName="PIP"
          displayPicture={false}
          filterKey="status"
          handleCardClick={[Function]}
          isManager={false}
          isTicked={
                    Object {
                              "project": "All Products",
                              "status": "All Fellows",
                            }
          }
          numberOfFellows={0}
          picture=""
/>,
        <FellowFilterCard
          cardName="No Ratings"
          displayPicture={false}
          filterKey="status"
          handleCardClick={[Function]}
          isManager={false}
          isTicked={
                    Object {
                              "project": "All Products",
                              "status": "All Fellows",
                            }
          }
          numberOfFellows={0}
          picture=""
/>,
      ],
      "className": "contain",
      "infinite": false,
      "nextArrow": <NavArrow
        buttonClass="slick-next"
        iconClass="fa-angle-right"
        onClick={[Function]}
/>,
      "prevArrow": <NavArrow
        buttonClass="slick-prev"
        iconClass="fa-angle-left"
        onClick={[Function]}
/>,
      "responsive": Array [
        Object {
          "breakpoint": 1000,
          "settings": Object {
            "slidesToScroll": 1,
            "slidesToShow": 2,
          },
        },
        Object {
          "breakpoint": 700,
          "settings": Object {
            "slidesToScroll": 1,
            "slidesToShow": 1,
          },
        },
      ],
      "rows": 1,
      "slidesToShow": 2.9999,
      "swipeToSlide": true,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "weak-key-0",
        "nodeType": "function",
        "props": Object {
          "cardName": "All Fellows",
          "displayPicture": false,
          "filterKey": "status",
          "handleCardClick": [Function],
          "isManager": false,
          "isTicked": Object {
            "project": "All Products",
            "status": "All Fellows",
          },
          "numberOfFellows": 6,
          "picture": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "weak-key-1",
        "nodeType": "function",
        "props": Object {
          "cardName": "On Track",
          "displayPicture": false,
          "filterKey": "status",
          "handleCardClick": [Function],
          "isManager": false,
          "isTicked": Object {
            "project": "All Products",
            "status": "All Fellows",
          },
          "numberOfFellows": 2,
          "picture": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "weak-key-2",
        "nodeType": "function",
        "props": Object {
          "cardName": "Off Track",
          "displayPicture": false,
          "filterKey": "status",
          "handleCardClick": [Function],
          "isManager": false,
          "isTicked": Object {
            "project": "All Products",
            "status": "All Fellows",
          },
          "numberOfFellows": 4,
          "picture": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "weak-key-3",
        "nodeType": "function",
        "props": Object {
          "cardName": "PIP",
          "displayPicture": false,
          "filterKey": "status",
          "handleCardClick": [Function],
          "isManager": false,
          "isTicked": Object {
            "project": "All Products",
            "status": "All Fellows",
          },
          "numberOfFellows": 0,
          "picture": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "weak-key-4",
        "nodeType": "function",
        "props": Object {
          "cardName": "No Ratings",
          "displayPicture": false,
          "filterKey": "status",
          "handleCardClick": [Function],
          "isManager": false,
          "isTicked": Object {
            "project": "All Products",
            "status": "All Fellows",
          },
          "numberOfFellows": 0,
          "picture": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <FellowFilterCard
            cardName="All Fellows"
            displayPicture={false}
            filterKey="status"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={6}
            picture=""
/>,
          <FellowFilterCard
            cardName="On Track"
            displayPicture={false}
            filterKey="status"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={2}
            picture=""
/>,
          <FellowFilterCard
            cardName="Off Track"
            displayPicture={false}
            filterKey="status"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={4}
            picture=""
/>,
          <FellowFilterCard
            cardName="PIP"
            displayPicture={false}
            filterKey="status"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={0}
            picture=""
/>,
          <FellowFilterCard
            cardName="No Ratings"
            displayPicture={false}
            filterKey="status"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={0}
            picture=""
/>,
        ],
        "className": "contain",
        "infinite": false,
        "nextArrow": <NavArrow
          buttonClass="slick-next"
          iconClass="fa-angle-right"
          onClick={[Function]}
/>,
        "prevArrow": <NavArrow
          buttonClass="slick-prev"
          iconClass="fa-angle-left"
          onClick={[Function]}
/>,
        "responsive": Array [
          Object {
            "breakpoint": 1000,
            "settings": Object {
              "slidesToScroll": 1,
              "slidesToShow": 2,
            },
          },
          Object {
            "breakpoint": 700,
            "settings": Object {
              "slidesToScroll": 1,
              "slidesToShow": 1,
            },
          },
        ],
        "rows": 1,
        "slidesToShow": 2.9999,
        "swipeToSlide": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "weak-key-0",
          "nodeType": "function",
          "props": Object {
            "cardName": "All Fellows",
            "displayPicture": false,
            "filterKey": "status",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 6,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "weak-key-1",
          "nodeType": "function",
          "props": Object {
            "cardName": "On Track",
            "displayPicture": false,
            "filterKey": "status",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 2,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "weak-key-2",
          "nodeType": "function",
          "props": Object {
            "cardName": "Off Track",
            "displayPicture": false,
            "filterKey": "status",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 4,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "weak-key-3",
          "nodeType": "function",
          "props": Object {
            "cardName": "PIP",
            "displayPicture": false,
            "filterKey": "status",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 0,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "weak-key-4",
          "nodeType": "function",
          "props": Object {
            "cardName": "No Ratings",
            "displayPicture": false,
            "filterKey": "status",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 0,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
